Global code re-format / optimize imports

--- a/src/assets/html/tandc.html
+++ b/src/assets/html/tandc.html
@@ -1,36 +1,65 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
-<style type="text/css">
-body, td, th {
-	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-</style>
+    <meta charset="utf-8">
+    <title>Untitled Document</title>
+    <style type="text/css">
+        body, td, th {
+            font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+        }
+    </style>
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000" link="#ED1C24" vlink="#ED1C24" alink="#ED1C24">
-<p style="text-align:center;color:#ED1C24"><strong>TERMS  &amp; CONDITIONS for the Sunglass Hut Photobooth Activity 2014</strong></p>
+<p style="text-align:center;color:#ED1C24"><strong>TERMS &amp; CONDITIONS for the Sunglass Hut Photobooth Activity
+    2014</strong></p>
 <ol>
- <li> You would like to participate in the Sunglass Hut Photobooth Activity (the  Event) and by ticking the box you have agreed to these Terms &amp; Conditions  and our data use policy. </li>
- <li>To participate in the Event you must confirm that  you are at least 16 years old or accompanied by an adult (over 18) at all  times. </li>
- <li> All participants must be registered on the event  tablet in order to participate in the Event. The participant&rsquo;s first name,  surname, postcode and  email address and / or Facebook credentials (not including password) will be  entered into a computerised database. </li>
- <li>You must ensure that the details provided by you  on registration or at any time are correct and complete. </li>
- <li>The Data Controller is Ignite Europe Ltd in full compliance with the  Data Protection Act 1998: <a href="http://www.ico.org.uk/ESDWebPages/DoSearch.asp?reg=5789225">http://www.ico.org.uk/ESDWebPages/DoSearch.asp?reg=5789225.</a> </li>
- <li>We may share your personal information within Sunglass Hut so we can provide  you with relevant products and services. Your personal information is safe  with us and, except for Sunglass Hut, will never be released to third parties  for their marketing purposes. </li>
- <li>We may use and share anonymised information outside Sunglass Hut. However, we  would like to reassure you that this never includes your personal  information. </li>
- <li>Any photos deemed inappropriate by the stand staff  will be deleted and not sent to the participant. Our decisions are final and  we reserve the right not to enter into detailed correspondence or discussions  with you. </li>
- <li>Photographs and video content may be taken during the event. By  participating you consent to being photographed and televised by means of a  tape or video recording that may be used currently (i.e. live) and at a later  date.  </li>
- <li>Sunglass Hut, its successors and assignees have the right to use and to  permit others to use your name, voice and likeness and or any part of the  photographs and/or recording of any type made of your appearance in all media  worldwide and marketing material in perpetuity. You warrant your rights to  authorise such use. </li>
- <li>By entering the activity you give us your unconditional,  payment-free permission to use this content for these purposes.
-  
-  Information  correct at time of going to print. All rights are reserved by Sunglass Hut  and materials may not be used in any way or copied in whole or in part  without prior written permission from Sunglass Hut and the Sunglass Hut logos  are trademarks of Sunglass Hut or its associated companies. 
-  If any  provision of these Terms and Conditions is found to be invalid by any court  having competent jurisdiction, the invalidity of that provision will not  affect the validity of the remaining provisions of these Terms and  Conditions, which shall remain in full force and effect.
-  
-  Promoter:  Luxottica Retail UK Ltd of 2nd Floor, Verulam Point, Staion Way, St Albans,  AL1 5HE
-  
-  The  Sunglass Hut privacy policy can be viewed at <a href="http://www.sunglasshut.com/AboutUs?page=privacy_policy&storeId=11352&catalogId=11152">http://www.sunglasshut.com/AboutUs?page=privacy_policy&amp;storeId=11352&amp;catalogId=11152 </a></li>
+    <li> You would like to participate in the Sunglass Hut Photobooth Activity (the Event) and by ticking the box you
+        have agreed to these Terms &amp; Conditions and our data use policy.
+    </li>
+    <li>To participate in the Event you must confirm that you are at least 16 years old or accompanied by an adult (over
+        18) at all times.
+    </li>
+    <li> All participants must be registered on the event tablet in order to participate in the Event. The participant&rsquo;s
+        first name, surname, postcode and email address and / or Facebook credentials (not including password) will be
+        entered into a computerised database.
+    </li>
+    <li>You must ensure that the details provided by you on registration or at any time are correct and complete.</li>
+    <li>The Data Controller is Ignite Europe Ltd in full compliance with the Data Protection Act 1998: <a
+            href="http://www.ico.org.uk/ESDWebPages/DoSearch.asp?reg=5789225">http://www.ico.org.uk/ESDWebPages/DoSearch.asp?reg=5789225.</a>
+    </li>
+    <li>We may share your personal information within Sunglass Hut so we can provide you with relevant products and
+        services. Your personal information is safe with us and, except for Sunglass Hut, will never be released to
+        third parties for their marketing purposes.
+    </li>
+    <li>We may use and share anonymised information outside Sunglass Hut. However, we would like to reassure you that
+        this never includes your personal information.
+    </li>
+    <li>Any photos deemed inappropriate by the stand staff will be deleted and not sent to the participant. Our
+        decisions are final and we reserve the right not to enter into detailed correspondence or discussions with you.
+    </li>
+    <li>Photographs and video content may be taken during the event. By participating you consent to being photographed
+        and televised by means of a tape or video recording that may be used currently (i.e. live) and at a later date. 
+    </li>
+    <li>Sunglass Hut, its successors and assignees have the right to use and to permit others to use your name, voice
+        and likeness and or any part of the photographs and/or recording of any type made of your appearance in all
+        media worldwide and marketing material in perpetuity. You warrant your rights to authorise such use.
+    </li>
+    <li>By entering the activity you give us your unconditional, payment-free permission to use this content for these
+        purposes.
+
+        Information correct at time of going to print. All rights are reserved by Sunglass Hut and materials may not be
+        used in any way or copied in whole or in part without prior written permission from Sunglass Hut and the
+        Sunglass Hut logos are trademarks of Sunglass Hut or its associated companies. 
+        If any provision of these Terms and Conditions is found to be invalid by any court having competent
+        jurisdiction, the invalidity of that provision will not affect the validity of the remaining provisions of these
+        Terms and Conditions, which shall remain in full force and effect.
+
+        Promoter: Luxottica Retail UK Ltd of 2nd Floor, Verulam Point, Staion Way, St Albans, AL1 5HE
+
+        The Sunglass Hut privacy policy can be viewed at <a
+                href="http://www.sunglasshut.com/AboutUs?page=privacy_policy&storeId=11352&catalogId=11152">http://www.sunglasshut.com/AboutUs?page=privacy_policy&amp;storeId=11352&amp;catalogId=11152 </a>
+    </li>
 </ol>
 </body>
 </html>
